Revision history for {{$dist->name}}

{{$NEXT}}

0.08      2013-05-31 06:58:49 America/New_York
  - promote to production

0.07_01   2013-05-08 08:31:22 EST5EDT
  - also test against 'bsd-csh' if found

0.07      2013-02-22 21:39:20 America/New_York
  - support for testing against cmd.exe and command.com under cygwin

0.06_03   2013-02-22 09:25:02 America/New_York
  - tone down diagnostic, display all shells found

0.06_02   2013-02-22 09:07:24 America/New_York
  - use test in place of [ for csh

0.06_01   2013-02-18 15:47:36 America/New_York
  - documentation update
  - search for [ during test

0.06      2012-11-29 11:47:51 America/New_York
  - fix for settting environment variables in traditional bourne shell

0.05      2012-11-14 12:43:28 America/New_York
  - escape [ in append and prepend magic so that csh on Solaris is happy.

0.04      2012-11-13 02:41:59 EST5EDT
  - test against 44bsd-csh, if found in PATH, non "t" csh on FreeBSD
  - fix warnings on older Perls

0.03      2012-10-28 07:44:41 EST5EDT
  - fix doco to remove bashism when referring to bourne shell.

0.02      2012-10-26 07:53:58 EST5EDT
  - use [ $?X = instead of [ $?X == because GNU [ works differently

0.01      2012-10-25 15:30:44 America/New_York
  - initial version